Fixed overflow bug

--- a/public/style/chatbot.less
+++ b/public/style/chatbot.less
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding-top: 0 !important;
+  overflow: hidden;
 }
 
 #chatbot-page-container {
