--- a/public/style/chatbot.less.css
+++ b/public/style/chatbot.less.css
@@ -4,20 +4,21 @@
   flex-direction: column;
   justify-content: space-between;
   padding-top: 0 !important;
+  overflow: hidden;
 }
-/* line 10, input */
+/* line 11, input */
 #chatbot-page-container {
   height: 100%;
   overflow: hidden scroll;
 }
-/* line 15, input */
+/* line 16, input */
 #chatbot-page-textarea-container {
   opacity: 0.8;
   margin: auto;
   margin-bottom: 32px;
   transition: 0.3s height;
 }
-/* line 25, input */
+/* line 26, input */
 .chatbot-page-textarea-container {
   /*position: relative;
   bottom: 50px;*/
@@ -43,7 +44,7 @@
   transform: translateX(-50%);
   */
 }
-/* line 60, input */
+/* line 61, input */
 .chatbot-page-textarea-container textarea {
   background-color: transparent;
   color: inherit;
@@ -55,16 +56,16 @@
   /*margin: 22px 12px;*/
   margin: 8px;
 }
-/* line 72, input */
+/* line 73, input */
 .chatbot-page-textarea-container button:hover {
   opacity: 0.8;
   box-shadow: 0 0 0 1px rgba(85, 166, 246, 0.2);
 }
-/* line 77, input */
+/* line 78, input */
 .chatbot-page-textarea-container button:active {
   transform: scale(0.7);
 }
-/* line 81, input */
+/* line 82, input */
 .chatbot-page-textarea-container button {
   box-shadow: inset 0 1px rgba(85, 166, 246, 0.4);
   color: #F0F7FF;
@@ -81,19 +82,19 @@
   transform: scale(1);
   width: 80px;
 }
-/* line 99, input */
+/* line 100, input */
 .chatbot-page-textarea-container textarea:focus {
   outline-width: 0;
 }
-/* line 103, input */
+/* line 104, input */
 .chatbot-page-textarea-container:hover {
   background-color: #0187caaa;
 }
-/* line 107, input */
+/* line 108, input */
 .chatbot-page-textarea-container:focus {
   background-color: #0187caff;
 }
-/* line 111, input */
+/* line 112, input */
 .chatbot-page-result-container {
   position: relative;
   top: 50px;
@@ -105,15 +106,15 @@
   /*overflow: scroll;*/
   padding-bottom: 32px;
 }
-/* line 122, input */
+/* line 123, input */
 .chatbot-page-result-container .chatbot-page-result-item:hover {
   background-color: #0187ca;
 }
-/* line 126, input */
+/* line 127, input */
 .chatbot-page-result-container .chatbot-page-result-item-robot {
   background: #4991b57b !important;
 }
-/* line 130, input */
+/* line 131, input */
 .chatbot-page-result-container .chatbot-page-result-item {
   color: white;
   border: 1px solid #0471a89b;
@@ -134,7 +135,7 @@
   display: flex;
   justify-content: space-between;
 }
-/* line 155, input */
+/* line 156, input */
 .chatbot-page-result-container .chatbot-page-result-loading {
   display: flex;
   color: white;
